upadted css for responsive design, still needs tweaking

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
             <div class="all items">
                 <div class="icon"></div>
             </div>
+            <div class="contactMe-email">
+                <p>Email:<a href="gmail.com/ericcoleman9217@gmail.com">  ericcoleman9217@gmail.com</a></p>
+            </div>
+            <br>
+            <div class="contactMe-Phone">
+                <p>Phone Number: 512-740-9151</p>
+            </div>
+
         </div>
 
 
