added profile pic and edited img sixing

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="#" >About</a>
+                    <a href="#about" >About</a>
                 </li>
                 <li>
-                    <a href="#" >Contact Me</a>
+                    <a href="#contact-me" >Contact Me</a>
                 </li>
 
             </ul>
@@ -41,19 +41,29 @@
             <h2>Designer/Developer</h2>
             <br>
             <a href="#">
-                <img src="./assets/images/github-icon.svg">
-                <img src ="./assets/images/instagram-icon.svg">
-                <img src ="./assets/images/linkedin-icon.svg">
-
+                <a href="https://github.com/">
+                    <img src="./assets/images/github-icon.svg">
+                </a>
+                <a href="https://www.instagram.com/">
+                    <img src ="./assets/images/instagram-icon.svg">
+                </a>
+                <a href="https://www.linkedin.com/feed/">
+                    <img src ="./assets/images/linkedin-icon.svg">
+                </a>
+                
             </a>
+        </div>
+        <br><br>
+        <div class="my-photo">
+            <img src="assets/images/my-image.JPG"></a>
         </div>
 
     </main>
     <!--Start of projects section-->
-    <section class="projects-page">
+    <section id ="projects" class="projects-page">
         <h2 class="projects-heading">Projects</h2>
         <div class="project1">
-            <div class="img">
+            <div class="img1">
                 <img src="assets/images/runbuddy-img.png" alt="run-buddy hero page">
             </div>
             <div class="project1-title">
@@ -84,7 +94,7 @@
     <!--End projects section-->
 
     <!--Start of About section-->
-    <section class="about-page">
+    <section id="about" class="about-page">
         <h2 class="about-heading">About</h2>
         <div class="all-items">
             <p>
@@ -99,7 +109,7 @@
     <!--End projects section-->
 
     <!--Start of projects section-->
-    <section class="contactMe">
+    <section id="contact-me" class="contactMe">
         <div class="contactMe-page">
             <h2 class="contactMe-heading">Contact Me</h2>
             <div class="all items">
