added minor css styling

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         <h2 class="projects-heading">Projects</h2>
         <div class="project1">
             <div class="img1">
-                <img src="assets/images/runbuddy-img.png" alt="run-buddy hero page">
+                <a href="https://ericc97.github.io/run-buddy/">
+                    <img src="assets/images/runbuddy-img.png" alt="run-buddy hero page">
+                </a>
+                
             </div>
             <div class="project1-title">
                 <h2 class="project1-title">Run-Buddy</h2>
@@ -76,7 +79,10 @@
     <section class="projects-page">
         <div class="project2">
             <div class="project2-img">
-                <img src="assets/images/horiseon.png" alt="Horiseon hero page">
+                <div class="img2">
+                    <a href="https://ericc97.github.io/Challenge-1/">
+                        <img src="assets/images/horiseon.png" alt="Horiseon hero page">
+                    </a>
             </div>
             <div class="project2-title">
                 <h2 class="project2-title">Horiseon</h2>
